Adiona features e execução global, permitindo instalar como comando direto

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "subtitle-data-parser",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Parser and save information about subtitles in file structures made for it.",
   "main": "Utils.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "subtitle-data-parser":"./bin/run-global.js"
   },
   "repository": {
     "type": "git",
